--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <article id="tentang">
         <h1>Tentang saya</h1>
         <p>
-          Saya adalah mahasiswa teknik informatika angkatan 2020 di Insitut
-          Teknologi Sumatera, sekarang saya sedang belajat HTML. Saya sangat
-          suka dengan teknologi dan saya ingin menjadi seorang programmer.
+          Nama saya Muhammad Elang Permadani, sekarang saya sedang belajar HTML.
+          Saya sangat suka dengan teknologi dan saya ingin menjadi seorang
+          programmer.
         </p>
 
         <figure>
