--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Praktikum 1</title>
+    <style>
+      * {
+        scroll-behavior: smooth;
+      }
+    </style>
   </head>
   <body>
     <header>
